Creating site for 0.1-SNAPSHOT

--- a/dependency-analysis.html
+++ b/dependency-analysis.html
@@ -13,9 +13,9 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/superhero/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
-		<link href="./css/docs.css" rel="stylesheet" />
+		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
 		
 		<link href="//yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet" />
@@ -206,7 +206,7 @@
     <tr class="b"> 
      <td>org.hibernate</td> 
      <td>hibernate-core</td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td>compile</td> 
      <td></td> 
      <td>jar</td> 
@@ -453,7 +453,7 @@
     <tr class="b"> 
      <td>org.hibernate</td> 
      <td>hibernate-ehcache</td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td>runtime</td> 
      <td></td> 
      <td>jar</td> 
@@ -462,7 +462,7 @@
     <tr class="a"> 
      <td>org.hibernate</td> 
      <td>hibernate-entitymanager</td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td>runtime</td> 
      <td></td> 
      <td>jar</td> 
@@ -570,7 +570,7 @@
     <tr class="a"> 
      <td>org.webjars</td> 
      <td>jquery</td> 
-     <td>2.0.2</td> 
+     <td>2.0.3</td> 
      <td>runtime</td> 
      <td></td> 
      <td>jar</td> 
