--- a/dependency-management.html
+++ b/dependency-management.html
@@ -13,9 +13,9 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/superhero/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
-		<link href="./css/docs.css" rel="stylesheet" />
+		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
 		
 		<link href="//yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet" />
@@ -211,7 +211,7 @@
     <tr class="b"> 
      <td>org.hibernate</td> 
      <td><a class="externalLink" href="http://hibernate.org">hibernate-core</a></td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td>jar</td> 
      <td><a class="externalLink" href="http://www.gnu.org/licenses/lgpl-2.1.html">GNU Lesser General Public License</a></td> 
     </tr> 
@@ -432,14 +432,14 @@
     <tr class="a"> 
      <td>org.hibernate</td> 
      <td><a class="externalLink" href="http://hibernate.org">hibernate-ehcache</a></td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td>jar</td> 
      <td><a class="externalLink" href="http://www.gnu.org/licenses/lgpl-2.1.html">GNU Lesser General Public License</a></td> 
     </tr> 
     <tr class="b"> 
      <td>org.hibernate</td> 
      <td><a class="externalLink" href="http://hibernate.org">hibernate-entitymanager</a></td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td>jar</td> 
      <td><a class="externalLink" href="http://www.gnu.org/licenses/lgpl-2.1.html">GNU Lesser General Public License</a></td> 
     </tr> 
@@ -495,7 +495,7 @@
     <tr class="b"> 
      <td>org.webjars</td> 
      <td><a class="externalLink" href="http://webjars.org">jquery</a></td> 
-     <td>2.0.2</td> 
+     <td>2.0.3</td> 
      <td>jar</td> 
      <td><a class="externalLink" href="https://github.com/jquery/jquery/blob/master/MIT-LICENSE.txt">MIT License</a></td> 
     </tr> 
