--- a/dependency-updates-report.html
+++ b/dependency-updates-report.html
@@ -13,9 +13,9 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/superhero/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
-		<link href="./css/docs.css" rel="stylesheet" />
+		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
 		
 		<link href="//yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet" />
@@ -142,7 +142,7 @@
    <tr class="a"> 
     <td><i class="icon-ok"></i></td> 
     <td># of dependencies using the latest version available</td> 
-    <td>52</td> 
+    <td>53</td> 
    </tr> 
    <tr class="b"> 
     <td><i class="icon-warning-sign"></i></td> 
@@ -152,7 +152,7 @@
    <tr class="a"> 
     <td><i class="icon-warning-sign"></i></td> 
     <td># of dependencies where the next version available is an incremental version update</td> 
-    <td>1</td> 
+    <td>0</td> 
    </tr> 
    <tr class="b"> 
     <td><i class="icon-warning-sign"></i></td> 
@@ -477,40 +477,40 @@
      <td><i class="icon-warning-sign"></i></td> 
      <td>org.hibernate</td> 
      <td>hibernate-core</td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td></td> 
      <td></td> 
      <td>jar</td> 
      <td></td> 
      <td></td> 
      <td></td> 
-     <td><b>4.2.3.Final</b></td> 
+     <td><b>4.3.0.Beta1</b></td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-warning-sign"></i></td> 
      <td>org.hibernate</td> 
      <td>hibernate-ehcache</td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td>runtime</td> 
      <td></td> 
      <td>jar</td> 
      <td></td> 
      <td></td> 
      <td></td> 
-     <td><b>4.2.3.Final</b></td> 
+     <td><b>4.3.0.Beta1</b></td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-warning-sign"></i></td> 
      <td>org.hibernate</td> 
      <td>hibernate-entitymanager</td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td>runtime</td> 
      <td></td> 
      <td>jar</td> 
      <td></td> 
      <td></td> 
      <td></td> 
-     <td><b>4.2.3.Final</b></td> 
+     <td><b>4.3.0.Beta1</b></td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-warning-sign"></i></td> 
@@ -942,15 +942,15 @@
      <td></td> 
     </tr> 
     <tr class="b"> 
-     <td><i class="icon-warning-sign"></i></td> 
+     <td><i class="icon-ok"></i></td> 
      <td>org.webjars</td> 
      <td>jquery</td> 
-     <td>2.0.2</td> 
+     <td>2.0.3</td> 
      <td>runtime</td> 
      <td></td> 
      <td>jar</td> 
      <td></td> 
-     <td><b>2.0.3</b></td> 
+     <td></td> 
      <td></td> 
      <td></td> 
     </tr> 
@@ -2025,7 +2025,7 @@
    <thead> 
     <tr class="b"> 
      <th width="80%">Newer versions</th> 
-     <td><b>4.2.3.Final</b>&nbsp;<i>Next Major</i><br />4.3.0.Beta1<br />4.3.0.Beta2<br /><b>4.3.0.Beta3</b>&nbsp;<i>Latest Major</i></td> 
+     <td><b>4.3.0.Beta1</b>&nbsp;<i>Next Major</i><br />4.3.0.Beta2<br /><b>4.3.0.Beta3</b>&nbsp;<i>Latest Major</i></td> 
     </tr> 
    </thead> 
    <thead> 
@@ -2049,7 +2049,7 @@
    <thead> 
     <tr class="b"> 
      <th width="80%">Current Version</th> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -2080,7 +2080,7 @@
    <thead> 
     <tr class="b"> 
      <th width="80%">Newer versions</th> 
-     <td><b>4.2.3.Final</b>&nbsp;<i>Next Major</i><br />4.3.0.Beta1<br />4.3.0.Beta2<br /><b>4.3.0.Beta3</b>&nbsp;<i>Latest Major</i></td> 
+     <td><b>4.3.0.Beta1</b>&nbsp;<i>Next Major</i><br />4.3.0.Beta2<br /><b>4.3.0.Beta3</b>&nbsp;<i>Latest Major</i></td> 
     </tr> 
    </thead> 
    <thead> 
@@ -2104,7 +2104,7 @@
    <thead> 
     <tr class="b"> 
      <th width="80%">Current Version</th> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -2135,7 +2135,7 @@
    <thead> 
     <tr class="b"> 
      <th width="80%">Newer versions</th> 
-     <td><b>4.2.3.Final</b>&nbsp;<i>Next Major</i><br />4.3.0.Beta1<br />4.3.0.Beta2<br /><b>4.3.0.Beta3</b>&nbsp;<i>Latest Major</i></td> 
+     <td><b>4.3.0.Beta1</b>&nbsp;<i>Next Major</i><br />4.3.0.Beta2<br /><b>4.3.0.Beta3</b>&nbsp;<i>Latest Major</i></td> 
     </tr> 
    </thead> 
    <thead> 
@@ -2159,7 +2159,7 @@
    <thead> 
     <tr class="b"> 
      <th width="80%">Current Version</th> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -3811,12 +3811,6 @@
   <h3 id="org.webjars:jquery">org.webjars:jquery</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
-    <tr class="b"> 
-     <th width="80%">Newer versions</th> 
-     <td><b>2.0.3</b>&nbsp;<i>Next Incremental</i></td> 
-    </tr> 
-   </thead> 
-   <thead> 
     <tr class="a"> 
      <th width="80%">Type</th> 
      <td>jar</td> 
@@ -3837,7 +3831,7 @@
    <thead> 
     <tr class="b"> 
      <th width="80%">Current Version</th> 
-     <td>2.0.2</td> 
+     <td>2.0.3</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -3855,7 +3849,7 @@
    <thead> 
     <tr class="a"> 
      <th width="80%">Status</th> 
-     <td><i class="icon-warning-sign"></i>&nbsp;There is at least one newer incremental version available. Incremental updates are typically passive.</td> 
+     <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
     </tr> 
    </thead> 
    <tbody> 
