--- a/surefire-report.html
+++ b/surefire-report.html
@@ -13,9 +13,9 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/superhero/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
-		<link href="./css/docs.css" rel="stylesheet" />
+		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
 		
 		<link href="//yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet" />
@@ -177,7 +177,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>34.043</td> 
+    <td>45.185</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -210,7 +210,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>17.069</td> 
+    <td>22.687</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#io.fixture.interceptor">io.fixture.interceptor</a></td> 
@@ -219,7 +219,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.053</td> 
+    <td>0.058</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#io.fixture.controller">io.fixture.controller</a></td> 
@@ -228,7 +228,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.033</td> 
+    <td>0.038</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#io.fixture.repository">io.fixture.repository</a></td> 
@@ -237,7 +237,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>16.845</td> 
+    <td>22.361</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#io.fixture.domain">io.fixture.domain</a></td> 
@@ -246,7 +246,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.043</td> 
+    <td>0.041</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -277,7 +277,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.713</td> 
+     <td>7.588</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.securityPersistentTokenRepositoryImplTest"><i class="icon-ok"></i></a></td> 
@@ -287,7 +287,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.655</td> 
+     <td>7.517</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.securityUserDetailsManagerImplTest"><i class="icon-ok"></i></a></td> 
@@ -297,7 +297,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.701</td> 
+     <td>7.582</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -327,7 +327,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.053</td> 
+     <td>0.058</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -357,7 +357,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.015</td> 
+     <td>0.013</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.controllerSecureControllerTest"><i class="icon-ok"></i></a></td> 
@@ -367,7 +367,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.006</td> 
+     <td>0.016</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.controllerStaticControllerTest"><i class="icon-ok"></i></a></td> 
@@ -377,7 +377,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.012</td> 
+     <td>0.009</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -407,7 +407,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.618</td> 
+     <td>7.462</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.repositoryPersistentLoginRepositoryTest"><i class="icon-ok"></i></a></td> 
@@ -417,7 +417,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.601</td> 
+     <td>7.437</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.repositoryUserRepositoryTest"><i class="icon-ok"></i></a></td> 
@@ -427,7 +427,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.626</td> 
+     <td>7.462</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -457,7 +457,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.043</td> 
+     <td>0.041</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -476,12 +476,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIndex</td> 
-     <td>0.014</td> 
+     <td>0.013</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUsers</td> 
-     <td>0.001</td> 
+     <td>0</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -494,7 +494,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIndex</td> 
-     <td>0.006</td> 
+     <td>0.016</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -507,7 +507,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAccessDenied</td> 
-     <td>0.01</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -517,7 +517,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIndex</td> 
-     <td>0.001</td> 
+     <td>0</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -527,12 +527,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testTerms</td> 
-     <td>0</td> 
+     <td>0.001</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testPrivacy</td> 
-     <td>0.001</td> 
+     <td>0</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -550,12 +550,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testGetId</td> 
-     <td>0.042</td> 
+     <td>0.041</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIsNewWithVersion</td> 
-     <td>0.001</td> 
+     <td>0</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -573,12 +573,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testPreHandleWithNullThemeName</td> 
-     <td>0.052</td> 
+     <td>0.056</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testPreHandle</td> 
-     <td>0.001</td> 
+     <td>0.002</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -601,47 +601,47 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithSingleUser</td> 
-     <td>5.559</td> 
+     <td>7.371</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllNames</td> 
-     <td>0.004</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>0.008</td> 
-    </tr> 
-    <tr class="b"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testDeleteWithInvalidName</td> 
-     <td>0.013</td> 
-    </tr> 
-    <tr class="a"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testFindAllUsernamesWithMultipleUsers</td> 
      <td>0.009</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
+     <td>testDeleteWithInvalidName</td> 
+     <td>0.024</td> 
+    </tr> 
+    <tr class="a"> 
+     <td><i class="icon-ok"></i></td> 
+     <td>testFindAllUsernamesWithMultipleUsers</td> 
+     <td>0.017</td> 
+    </tr> 
+    <tr class="b"> 
+     <td><i class="icon-ok"></i></td> 
      <td>testDelete</td> 
-     <td>0.006</td> 
+     <td>0.009</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteWithUsers</td> 
-     <td>0.007</td> 
+     <td>0.01</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithInvalidName</td> 
-     <td>0.005</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidName</td> 
-     <td>0.007</td> 
+     <td>0.008</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -654,17 +654,17 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUnknownUser</td> 
-     <td>5.561</td> 
+     <td>7.377</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUserWithNoPersistentLogins</td> 
-     <td>0.004</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>0.008</td> 
+     <td>0.018</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -674,12 +674,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidSeries</td> 
-     <td>0.005</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUserWithOnePersistentLogin</td> 
-     <td>0.017</td> 
+     <td>0.025</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -692,32 +692,32 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>5.577</td> 
+     <td>7.403</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testExistsWithInvalidUsername</td> 
-     <td>0.005</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteWithGroupsAndPersistentLogins</td> 
-     <td>0.017</td> 
+     <td>0.019</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidUsername</td> 
-     <td>0.004</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDelete</td> 
-     <td>0.008</td> 
+     <td>0.012</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testExists</td> 
-     <td>0.008</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -735,52 +735,52 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAddUserToGroup</td> 
-     <td>5.63</td> 
+     <td>7.486</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteGroup</td> 
-     <td>0.007</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindGroupAuthorities</td> 
-     <td>0.01</td> 
+     <td>0.011</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testCreateGroup</td> 
-     <td>0.011</td> 
+     <td>0.015</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRenameGroup</td> 
-     <td>0.008</td> 
+     <td>0.009</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRemoveGroupAuthority</td> 
-     <td>0.011</td> 
+     <td>0.013</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindUsersInGroup</td> 
-     <td>0.006</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRemoveUserFromGroup</td> 
-     <td>0.014</td> 
+     <td>0.019</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAddGroupAuthority</td> 
-     <td>0.011</td> 
+     <td>0.013</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllGroups</td> 
-     <td>0.005</td> 
+     <td>0.007</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -793,22 +793,22 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUpdateToken</td> 
-     <td>5.619</td> 
+     <td>7.472</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testGetTokenForSeries</td> 
-     <td>0.008</td> 
+     <td>0.012</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testCreateNewToken</td> 
-     <td>0.02</td> 
+     <td>0.021</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRemoveUserTokens</td> 
-     <td>0.008</td> 
+     <td>0.012</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -821,62 +821,62 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testLoadUserByUsernameWithInvalidUsername</td> 
-     <td>5.562</td> 
+     <td>7.373</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testLoadUserByUsername</td> 
-     <td>0.028</td> 
+     <td>0.053</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithoutAuthentication</td> 
-     <td>0.007</td> 
-    </tr> 
-    <tr class="b"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testUpdateUser</td> 
-     <td>0.032</td> 
-    </tr> 
-    <tr class="a"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testChangePasswordWithAuthenticationManagerSetsAuthentication</td> 
-     <td>0.008</td> 
-    </tr> 
-    <tr class="b"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testChangePasswordWithAuthenticationManagerChangesPassword</td> 
-     <td>0.011</td> 
-    </tr> 
-    <tr class="a"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testChangePasswordWithoutAuthenticationManagerChangesPassword</td> 
-     <td>0.01</td> 
-    </tr> 
-    <tr class="b"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testUserExists</td> 
-     <td>0.006</td> 
-    </tr> 
-    <tr class="a"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testCreateUser</td> 
      <td>0.012</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
-     <td>testDeleteUser</td> 
+     <td>testUpdateUser</td> 
+     <td>0.041</td> 
+    </tr> 
+    <tr class="a"> 
+     <td><i class="icon-ok"></i></td> 
+     <td>testChangePasswordWithAuthenticationManagerSetsAuthentication</td> 
+     <td>0.013</td> 
+    </tr> 
+    <tr class="b"> 
+     <td><i class="icon-ok"></i></td> 
+     <td>testChangePasswordWithAuthenticationManagerChangesPassword</td> 
+     <td>0.013</td> 
+    </tr> 
+    <tr class="a"> 
+     <td><i class="icon-ok"></i></td> 
+     <td>testChangePasswordWithoutAuthenticationManagerChangesPassword</td> 
+     <td>0.018</td> 
+    </tr> 
+    <tr class="b"> 
+     <td><i class="icon-ok"></i></td> 
+     <td>testUserExists</td> 
      <td>0.008</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
+     <td>testCreateUser</td> 
+     <td>0.018</td> 
+    </tr> 
+    <tr class="b"> 
+     <td><i class="icon-ok"></i></td> 
+     <td>testDeleteUser</td> 
+     <td>0.013</td> 
+    </tr> 
+    <tr class="a"> 
+     <td><i class="icon-ok"></i></td> 
      <td>testUserExistsWithInvalidUsername</td> 
-     <td>0.006</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithoutAuthenticationManagerSetsAuthentication</td> 
-     <td>0.011</td> 
+     <td>0.012</td> 
     </tr> 
    </tbody> 
   </table> 
