--- a/third-party-report.html
+++ b/third-party-report.html
@@ -13,9 +13,9 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/superhero/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
-		<link href="./css/docs.css" rel="stylesheet" />
+		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
 		
 		<link href="//yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet" />
@@ -755,7 +755,7 @@
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
-     <td><a href="./third-party-report.html#org.hibernate:hibernate-core:4.2.2.Final">org.hibernate:hibernate-core:4.2.2.Final</a></td> 
+     <td><a href="./third-party-report.html#org.hibernate:hibernate-core:4.2.3.Final">org.hibernate:hibernate-core:4.2.3.Final</a></td> 
      <td>compile</td> 
      <td></td> 
      <td>jar</td> 
@@ -763,7 +763,7 @@
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
-     <td><a href="./third-party-report.html#org.hibernate:hibernate-ehcache:4.2.2.Final">org.hibernate:hibernate-ehcache:4.2.2.Final</a></td> 
+     <td><a href="./third-party-report.html#org.hibernate:hibernate-ehcache:4.2.3.Final">org.hibernate:hibernate-ehcache:4.2.3.Final</a></td> 
      <td>runtime</td> 
      <td></td> 
      <td>jar</td> 
@@ -771,7 +771,7 @@
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
-     <td><a href="./third-party-report.html#org.hibernate:hibernate-entitymanager:4.2.2.Final">org.hibernate:hibernate-entitymanager:4.2.2.Final</a></td> 
+     <td><a href="./third-party-report.html#org.hibernate:hibernate-entitymanager:4.2.3.Final">org.hibernate:hibernate-entitymanager:4.2.3.Final</a></td> 
      <td>runtime</td> 
      <td></td> 
      <td>jar</td> 
@@ -1155,7 +1155,7 @@
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
-     <td><a href="./third-party-report.html#org.webjars:jquery:2.0.2">org.webjars:jquery:2.0.2</a></td> 
+     <td><a href="./third-party-report.html#org.webjars:jquery:2.0.3">org.webjars:jquery:2.0.3</a></td> 
      <td>runtime</td> 
      <td></td> 
      <td>jar</td> 
@@ -4579,7 +4579,7 @@
   <br /> 
  </div> 
  <div class="section"> 
-  <h3 id="org.hibernate:hibernate-core:4.2.2.Final">org.hibernate:hibernate-core:4.2.2.Final</h3> 
+  <h3 id="org.hibernate:hibernate-core:4.2.3.Final">org.hibernate:hibernate-core:4.2.3.Final</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
     <tr class="b"> 
@@ -4608,7 +4608,7 @@
    <thead> 
     <tr class="b"> 
      <th width="20%">GroupId:ArtifactId:Version</th> 
-     <td width="80%">org.hibernate:hibernate-core:4.2.2.Final</td> 
+     <td width="80%">org.hibernate:hibernate-core:4.2.3.Final</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -4624,7 +4624,7 @@
   <br /> 
  </div> 
  <div class="section"> 
-  <h3 id="org.hibernate:hibernate-ehcache:4.2.2.Final">org.hibernate:hibernate-ehcache:4.2.2.Final</h3> 
+  <h3 id="org.hibernate:hibernate-ehcache:4.2.3.Final">org.hibernate:hibernate-ehcache:4.2.3.Final</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
     <tr class="b"> 
@@ -4653,7 +4653,7 @@
    <thead> 
     <tr class="b"> 
      <th width="20%">GroupId:ArtifactId:Version</th> 
-     <td width="80%">org.hibernate:hibernate-ehcache:4.2.2.Final</td> 
+     <td width="80%">org.hibernate:hibernate-ehcache:4.2.3.Final</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -4669,7 +4669,7 @@
   <br /> 
  </div> 
  <div class="section"> 
-  <h3 id="org.hibernate:hibernate-entitymanager:4.2.2.Final">org.hibernate:hibernate-entitymanager:4.2.2.Final</h3> 
+  <h3 id="org.hibernate:hibernate-entitymanager:4.2.3.Final">org.hibernate:hibernate-entitymanager:4.2.3.Final</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
     <tr class="b"> 
@@ -4698,7 +4698,7 @@
    <thead> 
     <tr class="b"> 
      <th width="20%">GroupId:ArtifactId:Version</th> 
-     <td width="80%">org.hibernate:hibernate-entitymanager:4.2.2.Final</td> 
+     <td width="80%">org.hibernate:hibernate-entitymanager:4.2.3.Final</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -6739,7 +6739,7 @@
   <br /> 
  </div> 
  <div class="section"> 
-  <h3 id="org.webjars:jquery:2.0.2">org.webjars:jquery:2.0.2</h3> 
+  <h3 id="org.webjars:jquery:2.0.3">org.webjars:jquery:2.0.3</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
     <tr class="b"> 
@@ -6768,7 +6768,7 @@
    <thead> 
     <tr class="b"> 
      <th width="20%">GroupId:ArtifactId:Version</th> 
-     <td width="80%">org.webjars:jquery:2.0.2</td> 
+     <td width="80%">org.webjars:jquery:2.0.3</td> 
     </tr> 
    </thead> 
    <thead> 
