--- a/dependencies.html
+++ b/dependencies.html
@@ -13,9 +13,9 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/superhero/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
-		<link href="./css/docs.css" rel="stylesheet" />
+		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
 		
 		<link href="//yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet" />
@@ -169,7 +169,7 @@
     <tr class="b"> 
      <td>org.hibernate</td> 
      <td><a class="externalLink" href="http://hibernate.org">hibernate-core</a></td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td>jar</td> 
      <td><a class="externalLink" href="http://www.gnu.org/licenses/lgpl-2.1.html">GNU Lesser General Public License</a></td> 
     </tr> 
@@ -341,14 +341,14 @@
     <tr class="a"> 
      <td>org.hibernate</td> 
      <td><a class="externalLink" href="http://hibernate.org">hibernate-ehcache</a></td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td>jar</td> 
      <td><a class="externalLink" href="http://www.gnu.org/licenses/lgpl-2.1.html">GNU Lesser General Public License</a></td> 
     </tr> 
     <tr class="b"> 
      <td>org.hibernate</td> 
      <td><a class="externalLink" href="http://hibernate.org">hibernate-entitymanager</a></td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td>jar</td> 
      <td><a class="externalLink" href="http://www.gnu.org/licenses/lgpl-2.1.html">GNU Lesser General Public License</a></td> 
     </tr> 
@@ -404,7 +404,7 @@
     <tr class="b"> 
      <td>org.webjars</td> 
      <td><a class="externalLink" href="http://webjars.org">jquery</a></td> 
-     <td>2.0.2</td> 
+     <td>2.0.3</td> 
      <td>jar</td> 
      <td><a class="externalLink" href="https://github.com/jquery/jquery/blob/master/MIT-LICENSE.txt">MIT License</a></td> 
     </tr> 
@@ -1502,7 +1502,7 @@
          </table> 
         </div></li> 
       </ul></li> 
-     <li>org.hibernate:hibernate-core:jar:4.2.2.Final (compile) <button title="Information" class="btn btn-link btn-small" type="button" data-toggle="collapse" data-target="#_dep38"><i class="icon-info-sign"></i></button> 
+     <li>org.hibernate:hibernate-core:jar:4.2.3.Final (compile) <button title="Information" class="btn btn-link btn-small" type="button" data-toggle="collapse" data-target="#_dep38"><i class="icon-info-sign"></i></button> 
       <div id="_dep38" style="" class=" collapse"> 
        <table border="0" class="bodyTable table table-striped table-hover"> 
         <thead> 
@@ -1609,7 +1609,7 @@
          </table> 
         </div></li> 
       </ul></li> 
-     <li>org.hibernate:hibernate-ehcache:jar:4.2.2.Final (runtime) <button title="Information" class="btn btn-link btn-small" type="button" data-toggle="collapse" data-target="#_dep52"><i class="icon-info-sign"></i></button> 
+     <li>org.hibernate:hibernate-ehcache:jar:4.2.3.Final (runtime) <button title="Information" class="btn btn-link btn-small" type="button" data-toggle="collapse" data-target="#_dep52"><i class="icon-info-sign"></i></button> 
       <div id="_dep52" style="" class=" collapse"> 
        <table border="0" class="bodyTable table table-striped table-hover"> 
         <thead> 
@@ -1641,7 +1641,7 @@
          </table> 
         </div></li> 
       </ul></li> 
-     <li>org.hibernate:hibernate-entitymanager:jar:4.2.2.Final (runtime) <button title="Information" class="btn btn-link btn-small" type="button" data-toggle="collapse" data-target="#_dep56"><i class="icon-info-sign"></i></button> 
+     <li>org.hibernate:hibernate-entitymanager:jar:4.2.3.Final (runtime) <button title="Information" class="btn btn-link btn-small" type="button" data-toggle="collapse" data-target="#_dep56"><i class="icon-info-sign"></i></button> 
       <div id="_dep56" style="" class=" collapse"> 
        <table border="0" class="bodyTable table table-striped table-hover"> 
         <thead> 
@@ -2622,7 +2622,7 @@
         </tbody> 
        </table> 
       </div></li> 
-     <li>org.webjars:jquery:jar:2.0.2 (runtime) <button title="Information" class="btn btn-link btn-small" type="button" data-toggle="collapse" data-target="#_dep182"><i class="icon-info-sign"></i></button> 
+     <li>org.webjars:jquery:jar:2.0.3 (runtime) <button title="Information" class="btn btn-link btn-small" type="button" data-toggle="collapse" data-target="#_dep182"><i class="icon-info-sign"></i></button> 
       <div id="_dep182" style="" class=" collapse"> 
        <table border="0" class="bodyTable table table-striped table-hover"> 
         <thead> 
@@ -3977,17 +3977,17 @@
     <td>debug</td> 
    </tr> 
    <tr class="a"> 
-    <td>hibernate-core-4.2.2.Final.jar</td> 
+    <td>hibernate-core-4.2.3.Final.jar</td> 
     <td>4.41 MB</td> 
-    <td>3,189</td> 
-    <td>2,980</td> 
+    <td>3,190</td> 
+    <td>2,981</td> 
     <td>170</td> 
     <td>1.6</td> 
     <td>debug</td> 
    </tr> 
    <tr class="b"> 
-    <td>hibernate-ehcache-4.2.2.Final.jar</td> 
-    <td>134.89 kB</td> 
+    <td>hibernate-ehcache-4.2.3.Final.jar</td> 
+    <td>134.70 kB</td> 
     <td>71</td> 
     <td>58</td> 
     <td>6</td> 
@@ -3995,8 +3995,8 @@
     <td>debug</td> 
    </tr> 
    <tr class="a"> 
-    <td>hibernate-entitymanager-4.2.2.Final.jar</td> 
-    <td>473.22 kB</td> 
+    <td>hibernate-entitymanager-4.2.3.Final.jar</td> 
+    <td>473.35 kB</td> 
     <td>334</td> 
     <td>309</td> 
     <td>15</td> 
@@ -4427,8 +4427,8 @@
     <td>release</td> 
    </tr> 
    <tr class="a"> 
-    <td>jquery-2.0.2.jar</td> 
-    <td>102.00 kB</td> 
+    <td>jquery-2.0.3.jar</td> 
+    <td>101.71 kB</td> 
     <td>13</td> 
     <td>0</td> 
     <td>0</td> 
@@ -4518,9 +4518,9 @@
    </tr> 
    <tr class="b"> 
     <td>131</td> 
-    <td>67.94 MB</td> 
-    <td>45,802</td> 
-    <td>38,854</td> 
+    <td>67.95 MB</td> 
+    <td>45,803</td> 
+    <td>38,855</td> 
     <td>1,995</td> 
     <td>1.6</td> 
     <td>117</td> 
@@ -4528,8 +4528,8 @@
    <tr class="a"> 
     <td>compile: 32</td> 
     <td>compile: 13.51 MB</td> 
-    <td>compile: 10,974</td> 
-    <td>compile: 9,834</td> 
+    <td>compile: 10,975</td> 
+    <td>compile: 9,835</td> 
     <td>compile: 681</td> 
     <td>-</td> 
     <td>compile: 32</td> 
@@ -6334,16 +6334,8 @@
     <td><a class="externalLink" href="http://repo.maven.apache.org/maven2/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"><i class="icon-ok"></i></a></td> 
    </tr> 
    <tr class="a"> 
-    <td>org.hibernate:hibernate-core:jar:4.2.2.Final</td> 
-    <td><a class="externalLink" href="http://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-core/4.2.2.Final/hibernate-core-4.2.2.Final.jar"><i class="icon-ok"></i></a></td> 
-    <td><a class="externalLink" href="http://repo.springsource.org/libs-release/org/hibernate/hibernate-core/4.2.2.Final/hibernate-core-4.2.2.Final.jar"><i class="icon-ok"></i></a></td> 
-    <td>-</td> 
-    <td>-</td> 
-    <td>-</td> 
-    <td>-</td> 
-    <td>-</td> 
-    <td>-</td> 
-    <td><a class="externalLink" href="https://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-core/4.2.2.Final/hibernate-core-4.2.2.Final.jar"><i class="icon-ok"></i></a></td> 
+    <td>org.hibernate:hibernate-core:jar:4.2.3.Final</td> 
+    <td><a class="externalLink" href="http://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-core/4.2.3.Final/hibernate-core-4.2.3.Final.jar"><i class="icon-ok"></i></a></td> 
     <td>-</td> 
     <td>-</td> 
     <td>-</td> 
@@ -6351,13 +6343,21 @@
     <td>-</td> 
     <td>-</td> 
     <td>-</td> 
+    <td><a class="externalLink" href="https://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-core/4.2.3.Final/hibernate-core-4.2.3.Final.jar"><i class="icon-ok"></i></a></td> 
     <td>-</td> 
     <td>-</td> 
-    <td><a class="externalLink" href="http://repo.maven.apache.org/maven2/org/hibernate/hibernate-core/4.2.2.Final/hibernate-core-4.2.2.Final.jar"><i class="icon-ok"></i></a></td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td><a class="externalLink" href="http://repo.maven.apache.org/maven2/org/hibernate/hibernate-core/4.2.3.Final/hibernate-core-4.2.3.Final.jar"><i class="icon-ok"></i></a></td> 
    </tr> 
    <tr class="b"> 
-    <td>org.hibernate:hibernate-ehcache:jar:4.2.2.Final</td> 
-    <td><a class="externalLink" href="http://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-ehcache/4.2.2.Final/hibernate-ehcache-4.2.2.Final.jar"><i class="icon-ok"></i></a></td> 
+    <td>org.hibernate:hibernate-ehcache:jar:4.2.3.Final</td> 
+    <td><a class="externalLink" href="http://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-ehcache/4.2.3.Final/hibernate-ehcache-4.2.3.Final.jar"><i class="icon-ok"></i></a></td> 
     <td>-</td> 
     <td>-</td> 
     <td>-</td> 
@@ -6365,7 +6365,7 @@
     <td>-</td> 
     <td>-</td> 
     <td>-</td> 
-    <td><a class="externalLink" href="https://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-ehcache/4.2.2.Final/hibernate-ehcache-4.2.2.Final.jar"><i class="icon-ok"></i></a></td> 
+    <td><a class="externalLink" href="https://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-ehcache/4.2.3.Final/hibernate-ehcache-4.2.3.Final.jar"><i class="icon-ok"></i></a></td> 
     <td>-</td> 
     <td>-</td> 
     <td>-</td> 
@@ -6375,19 +6375,11 @@
     <td>-</td> 
     <td>-</td> 
     <td>-</td> 
-    <td><a class="externalLink" href="http://repo.maven.apache.org/maven2/org/hibernate/hibernate-ehcache/4.2.2.Final/hibernate-ehcache-4.2.2.Final.jar"><i class="icon-ok"></i></a></td> 
+    <td><a class="externalLink" href="http://repo.maven.apache.org/maven2/org/hibernate/hibernate-ehcache/4.2.3.Final/hibernate-ehcache-4.2.3.Final.jar"><i class="icon-ok"></i></a></td> 
    </tr> 
    <tr class="a"> 
-    <td>org.hibernate:hibernate-entitymanager:jar:4.2.2.Final</td> 
-    <td><a class="externalLink" href="http://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-entitymanager/4.2.2.Final/hibernate-entitymanager-4.2.2.Final.jar"><i class="icon-ok"></i></a></td> 
-    <td><a class="externalLink" href="http://repo.springsource.org/libs-release/org/hibernate/hibernate-entitymanager/4.2.2.Final/hibernate-entitymanager-4.2.2.Final.jar"><i class="icon-ok"></i></a></td> 
-    <td>-</td> 
-    <td>-</td> 
-    <td>-</td> 
-    <td>-</td> 
-    <td>-</td> 
-    <td>-</td> 
-    <td><a class="externalLink" href="https://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-entitymanager/4.2.2.Final/hibernate-entitymanager-4.2.2.Final.jar"><i class="icon-ok"></i></a></td> 
+    <td>org.hibernate:hibernate-entitymanager:jar:4.2.3.Final</td> 
+    <td><a class="externalLink" href="http://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-entitymanager/4.2.3.Final/hibernate-entitymanager-4.2.3.Final.jar"><i class="icon-ok"></i></a></td> 
     <td>-</td> 
     <td>-</td> 
     <td>-</td> 
@@ -6395,9 +6387,17 @@
     <td>-</td> 
     <td>-</td> 
     <td>-</td> 
+    <td><a class="externalLink" href="https://repository.jboss.org/nexus/content/groups/public-jboss/org/hibernate/hibernate-entitymanager/4.2.3.Final/hibernate-entitymanager-4.2.3.Final.jar"><i class="icon-ok"></i></a></td> 
     <td>-</td> 
     <td>-</td> 
-    <td><a class="externalLink" href="http://repo.maven.apache.org/maven2/org/hibernate/hibernate-entitymanager/4.2.2.Final/hibernate-entitymanager-4.2.2.Final.jar"><i class="icon-ok"></i></a></td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td>-</td> 
+    <td><a class="externalLink" href="http://repo.maven.apache.org/maven2/org/hibernate/hibernate-entitymanager/4.2.3.Final/hibernate-entitymanager-4.2.3.Final.jar"><i class="icon-ok"></i></a></td> 
    </tr> 
    <tr class="b"> 
     <td>org.hibernate:hibernate-validator:jar:4.3.1.Final</td> 
@@ -7434,7 +7434,7 @@
     <td><a class="externalLink" href="http://repo.maven.apache.org/maven2/org/webjars/html5shiv/3.6.2/html5shiv-3.6.2.jar"><i class="icon-ok"></i></a></td> 
    </tr> 
    <tr class="a"> 
-    <td>org.webjars:jquery:jar:2.0.2</td> 
+    <td>org.webjars:jquery:jar:2.0.3</td> 
     <td>-</td> 
     <td>-</td> 
     <td>-</td> 
@@ -7453,7 +7453,7 @@
     <td>-</td> 
     <td>-</td> 
     <td>-</td> 
-    <td><a class="externalLink" href="http://repo.maven.apache.org/maven2/org/webjars/jquery/2.0.2/jquery-2.0.2.jar"><i class="icon-ok"></i></a></td> 
+    <td><a class="externalLink" href="http://repo.maven.apache.org/maven2/org/webjars/jquery/2.0.3/jquery-2.0.3.jar"><i class="icon-ok"></i></a></td> 
    </tr> 
    <tr class="b"> 
     <td>org.webjars:jshint:jar:2.1.3</td> 
@@ -7656,7 +7656,7 @@
    <tr class="b"> 
     <td>131 (compile: 32, test: 18, runtime: 80, provided: 1)</td> 
     <td>10</td> 
-    <td>73</td> 
+    <td>71</td> 
     <td>0</td> 
     <td>0</td> 
     <td>2</td> 
