--- a/file-activity.html
+++ b/file-activity.html
@@ -13,9 +13,9 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/superhero/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
-		<link href="./css/docs.css" rel="stylesheet" />
+		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
 		
 		<link href="//yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet" />
@@ -138,7 +138,7 @@
  </div> 
  <div class="section"> 
   <h3 id="Changes_between_2013-06-10_and_2013-07-11">Changes between 2013-06-10 and 2013-07-11</h3> 
-  <p>Total commits: 163<br />Total number of files changed: 361</p> 
+  <p>Total commits: 166<br />Total number of files changed: 361</p> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
     <tr class="a"> 
@@ -149,7 +149,7 @@
    <tbody> 
     <tr class="b"> 
      <td><a class="externalLink" href="https://github.com/martinlau/fixture/blob/master/pom.xml"><b>pom.xml</b></a> </td> 
-     <td>57</td> 
+     <td>59</td> 
     </tr> 
     <tr class="a"> 
      <td><a class="externalLink" href="https://github.com/martinlau/fixture/blob/master/fixture-parent/pom.xml">fixture-parent/<b>pom.xml</b></a> </td> 
@@ -1140,19 +1140,19 @@
      <td>4</td> 
     </tr> 
     <tr class="b"> 
+     <td><a class="externalLink" href="https://github.com/martinlau/fixture/blob/master/src/site/site.xml">src/site/<b>site.xml</b></a> </td> 
+     <td>3</td> 
+    </tr> 
+    <tr class="a"> 
      <td><a class="externalLink" href="https://github.com/martinlau/fixture/blob/master/src/main/resources/META-INF/spring/fixture-trace.xml">src/main/resources/META-INF/spring/<b>fixture-trace.xml</b></a> </td> 
      <td>2</td> 
     </tr> 
-    <tr class="a"> 
+    <tr class="b"> 
      <td><a class="externalLink" href="https://github.com/martinlau/fixture/blob/master/fixture-annotation/pom.xml">fixture-annotation/<b>pom.xml</b></a> </td> 
      <td>2</td> 
     </tr> 
-    <tr class="b"> 
-     <td><a class="externalLink" href="https://github.com/martinlau/fixture/blob/master/fixture-annotation/src/main/resources/ch/qos/logback/core/read/annotations.xml">fixture-annotation/src/main/resources/ch/qos/logback/core/read/<b>annotations.xml</b></a> </td> 
-     <td>2</td> 
-    </tr> 
     <tr class="a"> 
-     <td><a class="externalLink" href="https://github.com/martinlau/fixture/blob/master/src/site/site.xml">src/site/<b>site.xml</b></a> </td> 
+     <td><a class="externalLink" href="https://github.com/martinlau/fixture/blob/master/fixture-annotation/src/main/resources/ch/qos/logback/core/read/annotations.xml">fixture-annotation/src/main/resources/ch/qos/logback/core/read/<b>annotations.xml</b></a> </td> 
      <td>2</td> 
     </tr> 
     <tr class="b"> 
