--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -13,9 +13,9 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/superhero/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
-		<link href="./css/docs.css" rel="stylesheet" />
+		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
 		
 		<link href="//yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet" />
@@ -142,12 +142,12 @@
    <tr class="a"> 
     <td><i class="icon-ok"></i></td> 
     <td># of plugins using the latest version available</td> 
-    <td>16</td> 
+    <td>19</td> 
    </tr> 
    <tr class="b"> 
     <td><i class="icon-warning-sign"></i></td> 
     <td># of plugins where the next version available is smaller than an incremental version update</td> 
-    <td>1</td> 
+    <td>0</td> 
    </tr> 
    <tr class="a"> 
     <td><i class="icon-warning-sign"></i></td> 
@@ -157,7 +157,7 @@
    <tr class="b"> 
     <td><i class="icon-warning-sign"></i></td> 
     <td># of plugins where the next version available is a minor version update</td> 
-    <td>2</td> 
+    <td>0</td> 
    </tr> 
    <tr class="a"> 
     <td><i class="icon-warning-sign"></i></td> 
@@ -213,24 +213,24 @@
      <td><i class="icon-ok"></i></td> 
     </tr> 
     <tr class="a"> 
-     <td><i class="icon-warning-sign"></i></td> 
+     <td><i class="icon-ok"></i></td> 
      <td>org.apache.maven.plugins</td> 
      <td>maven-antrun-plugin</td> 
-     <td>1.3</td> 
+     <td><b>1.7</b></td> 
      <td></td> 
      <td></td> 
-     <td><b>1.4</b></td> 
+     <td></td> 
      <td></td> 
      <td><i class="icon-ok"></i></td> 
     </tr> 
     <tr class="b"> 
-     <td><i class="icon-warning-sign"></i></td> 
+     <td><i class="icon-ok"></i></td> 
      <td>org.apache.maven.plugins</td> 
      <td>maven-assembly-plugin</td> 
-     <td>2.2-beta-5</td> 
-     <td><b>2.2</b></td> 
-     <td><b>2.2.1</b></td> 
-     <td><b>2.3</b></td> 
+     <td><b>2.4</b></td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
      <td></td> 
      <td><i class="icon-ok"></i></td> 
     </tr> 
@@ -323,13 +323,13 @@
      <td><i class="icon-ok"></i></td> 
     </tr> 
     <tr class="a"> 
-     <td><i class="icon-warning-sign"></i></td> 
+     <td><i class="icon-ok"></i></td> 
      <td>org.apache.maven.plugins</td> 
      <td>maven-release-plugin</td> 
-     <td>2.0</td> 
+     <td><b>2.4.1</b></td> 
      <td></td> 
      <td></td> 
-     <td><b>2.1</b></td> 
+     <td></td> 
      <td></td> 
      <td><i class="icon-ok"></i></td> 
     </tr> 
@@ -456,15 +456,9 @@
   <h3 id="Plugin_org.apache.maven.plugins:maven-antrun-plugin">Plugin org.apache.maven.plugins:maven-antrun-plugin</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
-    <tr class="a"> 
-     <th width="80%">Newer versions</th> 
-     <td><b>1.4</b>&nbsp;<i>Next Minor</i><br />1.5<br />1.6<br /><b>1.7</b>&nbsp;<i>Latest Minor</i></td> 
-    </tr> 
-   </thead> 
-   <thead> 
     <tr class="b"> 
      <th width="80%">Current Version</th> 
-     <td>1.3</td> 
+     <td>1.7</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -482,7 +476,7 @@
    <thead> 
     <tr class="a"> 
      <th width="80%">Status</th> 
-     <td><i class="icon-warning-sign"></i>&nbsp;There is at least one newer minor version available. Minor updates are sometimes passive.</td> 
+     <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
     </tr> 
    </thead> 
    <tbody> 
@@ -493,15 +487,9 @@
   <h3 id="Plugin_org.apache.maven.plugins:maven-assembly-plugin">Plugin org.apache.maven.plugins:maven-assembly-plugin</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
-    <tr class="a"> 
-     <th width="80%">Newer versions</th> 
-     <td><b>2.2</b>&nbsp;<i>Next Version</i><br /><b>2.2.1</b>&nbsp;<i>Next Incremental</i><br /><b>2.2.2</b>&nbsp;<i>Latest Incremental</i><br /><b>2.3</b>&nbsp;<i>Next Minor</i><br /><b>2.4</b>&nbsp;<i>Latest Minor</i></td> 
-    </tr> 
-   </thead> 
-   <thead> 
     <tr class="b"> 
      <th width="80%">Current Version</th> 
-     <td>2.2-beta-5</td> 
+     <td>2.4</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -519,7 +507,7 @@
    <thead> 
     <tr class="a"> 
      <th width="80%">Status</th> 
-     <td><i class="icon-warning-sign"></i>&nbsp;There is at least one newer version available.</td> 
+     <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
     </tr> 
    </thead> 
    <tbody> 
@@ -778,15 +766,9 @@
   <h3 id="Plugin_org.apache.maven.plugins:maven-release-plugin">Plugin org.apache.maven.plugins:maven-release-plugin</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
-    <tr class="a"> 
-     <th width="80%">Newer versions</th> 
-     <td><b>2.1</b>&nbsp;<i>Next Minor</i><br />2.2<br />2.2.1<br />2.2.2<br />2.3<br />2.3.1<br />2.3.2<br /><b>2.4</b>&nbsp;<i>Latest Minor</i></td> 
-    </tr> 
-   </thead> 
-   <thead> 
     <tr class="b"> 
      <th width="80%">Current Version</th> 
-     <td>2.0</td> 
+     <td>2.4.1</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -804,7 +786,7 @@
    <thead> 
     <tr class="a"> 
      <th width="80%">Status</th> 
-     <td><i class="icon-warning-sign"></i>&nbsp;There is at least one newer minor version available. Minor updates are sometimes passive.</td> 
+     <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
     </tr> 
    </thead> 
    <tbody> 
