--- a/property-updates-report.html
+++ b/property-updates-report.html
@@ -13,9 +13,9 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/superhero/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
-		<link href="./css/docs.css" rel="stylesheet" />
+		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
 		
 		<link href="//yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet" />
@@ -142,7 +142,7 @@
    <tr class="a"> 
     <td><i class="icon-ok"></i></td> 
     <td># of properties using the latest version available</td> 
-    <td>57</td> 
+    <td>61</td> 
    </tr> 
    <tr class="b"> 
     <td><i class="icon-warning-sign"></i></td> 
@@ -152,7 +152,7 @@
    <tr class="a"> 
     <td><i class="icon-warning-sign"></i></td> 
     <td># of properties where the next version available is an incremental version update</td> 
-    <td>1</td> 
+    <td>0</td> 
    </tr> 
    <tr class="b"> 
     <td><i class="icon-warning-sign"></i></td> 
@@ -170,7 +170,7 @@
   <h3 id="Summary_of_properties_associated_with_artifact_versions">Summary of properties associated with artifact versions</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
-    <tr class="a"> 
+    <tr class="b"> 
      <th>Status</th> 
      <th>Property</th> 
      <th>Current Version</th> 
@@ -257,8 +257,8 @@
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
-     <td>${jdepend-maven-plugin.version}</td> 
-     <td>2.0-beta-2</td> 
+     <td>${maven-release-plugin.version}</td> 
+     <td>2.4.1</td> 
      <td></td> 
      <td></td> 
      <td></td> 
@@ -266,8 +266,26 @@
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
+     <td>${jdepend-maven-plugin.version}</td> 
+     <td>2.0-beta-2</td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+    </tr> 
+    <tr class="b"> 
+     <td><i class="icon-ok"></i></td> 
      <td>${jamon.version}</td> 
      <td>2.7</td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+    </tr> 
+    <tr class="a"> 
+     <td><i class="icon-ok"></i></td> 
+     <td>${maven-antrun-plugin.version}</td> 
+     <td>1.7</td> 
      <td></td> 
      <td></td> 
      <td></td> 
@@ -483,11 +501,11 @@
     <tr class="a"> 
      <td><i class="icon-warning-sign"></i></td> 
      <td>${hibernate.version}</td> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
      <td></td> 
      <td></td> 
      <td></td> 
-     <td><b>4.2.3.Final</b></td> 
+     <td><b>4.3.0.Beta1</b></td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -545,25 +563,7 @@
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
-     <td>${spring-data-rest.version}</td> 
-     <td>1.0.0.RELEASE</td> 
-     <td></td> 
-     <td></td> 
-     <td></td> 
-     <td></td> 
-    </tr> 
-    <tr class="a"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>${velocity.version}</td> 
-     <td>1.7</td> 
-     <td></td> 
-     <td></td> 
-     <td></td> 
-     <td></td> 
-    </tr> 
-    <tr class="b"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>${taglist-maven-plugin.version}</td> 
+     <td>${maven-assembly-plugin.version}</td> 
      <td>2.4</td> 
      <td></td> 
      <td></td> 
@@ -572,6 +572,33 @@
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
+     <td>${spring-data-rest.version}</td> 
+     <td>1.0.0.RELEASE</td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+    </tr> 
+    <tr class="b"> 
+     <td><i class="icon-ok"></i></td> 
+     <td>${velocity.version}</td> 
+     <td>1.7</td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+    </tr> 
+    <tr class="a"> 
+     <td><i class="icon-ok"></i></td> 
+     <td>${taglist-maven-plugin.version}</td> 
+     <td>2.4</td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+    </tr> 
+    <tr class="b"> 
+     <td><i class="icon-ok"></i></td> 
      <td>${maven-surefire-report-plugin.version}</td> 
      <td>2.15</td> 
      <td></td> 
@@ -579,7 +606,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="b"> 
+    <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>${cucumber.version}</td> 
      <td>1.1.3</td> 
@@ -588,7 +615,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="a"> 
+    <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>${maven-surefire-plugin.version}</td> 
      <td>2.14.1</td> 
@@ -597,7 +624,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="b"> 
+    <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>${font-awesome.version}</td> 
      <td>3.2.1</td> 
@@ -606,7 +633,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="a"> 
+    <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>${maven-site-plugin.version}</td> 
      <td>3.2</td> 
@@ -615,7 +642,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="b"> 
+    <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>${tomcat7-maven-plugin.version}</td> 
      <td>2.1</td> 
@@ -624,7 +651,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="a"> 
+    <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>${ant.version}</td> 
      <td>1.9.1</td> 
@@ -633,7 +660,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="b"> 
+    <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>${bootswatch.version}</td> 
      <td>2.3.1</td> 
@@ -642,19 +669,10 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="a"> 
-     <td><i class="icon-warning-sign"></i></td> 
-     <td>${jquery.version}</td> 
-     <td>2.0.2</td> 
-     <td></td> 
-     <td><b>2.0.3</b></td> 
-     <td></td> 
-     <td></td> 
-    </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
-     <td>${html5shiv.version}</td> 
-     <td>3.6.2</td> 
+     <td>${jquery.version}</td> 
+     <td>2.0.3</td> 
      <td></td> 
      <td></td> 
      <td></td> 
@@ -671,6 +689,15 @@
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
+     <td>${html5shiv.version}</td> 
+     <td>3.6.2</td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+    </tr> 
+    <tr class="a"> 
+     <td><i class="icon-ok"></i></td> 
      <td>${spring-asm.version}</td> 
      <td>3.1.4.RELEASE</td> 
      <td></td> 
@@ -678,7 +705,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="a"> 
+    <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>${license-maven-plugin.version}</td> 
      <td>1.5</td> 
@@ -687,7 +714,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="b"> 
+    <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>${spring-data-jpa.version}</td> 
      <td>1.3.2.RELEASE</td> 
@@ -696,7 +723,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="a"> 
+    <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>${maven-clean-plugin.version}</td> 
      <td>2.5</td> 
@@ -705,7 +732,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="b"> 
+    <tr class="a"> 
      <td><i class="icon-warning-sign"></i></td> 
      <td>${hibernate-validator.version}</td> 
      <td>4.3.1.Final</td> 
@@ -714,7 +741,7 @@
      <td></td> 
      <td><b>5.0.0.Alpha1</b></td> 
     </tr> 
-    <tr class="a"> 
+    <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>${logback.version}</td> 
      <td>1.0.13</td> 
@@ -723,7 +750,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="b"> 
+    <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>${spring-security.version}</td> 
      <td>3.1.4.RELEASE</td> 
@@ -732,7 +759,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="a"> 
+    <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>${site-maven-plugin.version}</td> 
      <td>0.8</td> 
@@ -741,7 +768,7 @@
      <td></td> 
      <td></td> 
     </tr> 
-    <tr class="b"> 
+    <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>${jstl.version}</td> 
      <td>1.2</td> 
@@ -761,55 +788,55 @@
   <h3 id="aant.version">${ant.version}</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
-    <tr class="b"> 
+    <tr class="a"> 
      <th width="80%">Always use reactor projects (even if older or -SNAPSHOT)</th> 
      <td>Yes</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="a"> 
+    <tr class="b"> 
      <th width="80%">Include projects from reactor</th> 
      <td>Yes</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="b"> 
+    <tr class="a"> 
      <th width="80%">Only use release versions</th> 
      <td>No</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="a"> 
+    <tr class="b"> 
      <th width="80%">Infer associations from project</th> 
      <td>Yes</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="b"> 
+    <tr class="a"> 
      <th width="80%">Allowed version range</th> 
      <td>[,)</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="a"> 
+    <tr class="b"> 
      <th width="80%">Current Version</th> 
      <td>1.9.1</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="b"> 
+    <tr class="a"> 
      <th width="80%">Associated artifacts</th> 
      <td>org.apache.ant:ant</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="a"> 
+    <tr class="b"> 
      <th width="80%">Property</th> 
      <td>${ant.version}</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="b"> 
+    <tr class="a"> 
      <th width="80%">Status</th> 
      <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
     </tr> 
@@ -1720,13 +1747,13 @@
    <thead> 
     <tr class="a"> 
      <th width="80%">Newer versions</th> 
-     <td><b>4.2.3.Final</b>&nbsp;<i>Next Major</i><br />4.3.0.Beta1<br />4.3.0.Beta2<br /><b>4.3.0.Beta3</b>&nbsp;<i>Latest Major</i></td> 
+     <td><b>4.3.0.Beta1</b>&nbsp;<i>Next Major</i><br />4.3.0.Beta2<br /><b>4.3.0.Beta3</b>&nbsp;<i>Latest Major</i></td> 
     </tr> 
    </thead> 
    <thead> 
     <tr class="b"> 
      <th width="80%">Current Version</th> 
-     <td>4.2.2.Final</td> 
+     <td>4.2.3.Final</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -1999,45 +2026,39 @@
   <h3 id="ajquery.version">${jquery.version}</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
-    <tr class="b"> 
+    <tr class="a"> 
      <th width="80%">Always use reactor projects (even if older or -SNAPSHOT)</th> 
      <td>Yes</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="a"> 
+    <tr class="b"> 
      <th width="80%">Include projects from reactor</th> 
      <td>Yes</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="b"> 
+    <tr class="a"> 
      <th width="80%">Only use release versions</th> 
      <td>No</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="a"> 
+    <tr class="b"> 
      <th width="80%">Infer associations from project</th> 
      <td>Yes</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="b"> 
+    <tr class="a"> 
      <th width="80%">Allowed version range</th> 
      <td>[,)</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="a"> 
-     <th width="80%">Newer versions</th> 
-     <td><b>2.0.3</b>&nbsp;<i>Next Incremental</i></td> 
-    </tr> 
-   </thead> 
-   <thead> 
     <tr class="b"> 
      <th width="80%">Current Version</th> 
-     <td>2.0.2</td> 
+     <td>2.0.3</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -2055,7 +2076,7 @@
    <thead> 
     <tr class="a"> 
      <th width="80%">Status</th> 
-     <td><i class="icon-warning-sign"></i>&nbsp;There is at least one newer incremental version available. Incremental updates are typically passive.</td> 
+     <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
     </tr> 
    </thead> 
    <tbody> 
@@ -2538,6 +2559,128 @@
     <tr class="b"> 
      <th width="80%">Property</th> 
      <td>${logback.version}</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Status</th> 
+     <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
+    </tr> 
+   </thead> 
+   <tbody> 
+   </tbody> 
+  </table> 
+ </div> 
+ <div class="section"> 
+  <h3 id="amaven-antrun-plugin.version">${maven-antrun-plugin.version}</h3> 
+  <table border="0" class="bodyTable table table-striped table-hover"> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Always use reactor projects (even if older or -SNAPSHOT)</th> 
+     <td>Yes</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Include projects from reactor</th> 
+     <td>Yes</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Only use release versions</th> 
+     <td>No</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Infer associations from project</th> 
+     <td>Yes</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Allowed version range</th> 
+     <td>[,)</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Current Version</th> 
+     <td>1.7</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Associated artifacts</th> 
+     <td>org.apache.maven.plugins:maven-antrun-plugin</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Property</th> 
+     <td>${maven-antrun-plugin.version}</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Status</th> 
+     <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
+    </tr> 
+   </thead> 
+   <tbody> 
+   </tbody> 
+  </table> 
+ </div> 
+ <div class="section"> 
+  <h3 id="amaven-assembly-plugin.version">${maven-assembly-plugin.version}</h3> 
+  <table border="0" class="bodyTable table table-striped table-hover"> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Always use reactor projects (even if older or -SNAPSHOT)</th> 
+     <td>Yes</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Include projects from reactor</th> 
+     <td>Yes</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Only use release versions</th> 
+     <td>No</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Infer associations from project</th> 
+     <td>Yes</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Allowed version range</th> 
+     <td>[,)</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Current Version</th> 
+     <td>2.4</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Associated artifacts</th> 
+     <td>org.apache.maven.plugins:maven-assembly-plugin</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Property</th> 
+     <td>${maven-assembly-plugin.version}</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -3148,6 +3291,67 @@
     <tr class="b"> 
      <th width="80%">Property</th> 
      <td>${maven-project-info-reports-plugin.version}</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Status</th> 
+     <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
+    </tr> 
+   </thead> 
+   <tbody> 
+   </tbody> 
+  </table> 
+ </div> 
+ <div class="section"> 
+  <h3 id="amaven-release-plugin.version">${maven-release-plugin.version}</h3> 
+  <table border="0" class="bodyTable table table-striped table-hover"> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Always use reactor projects (even if older or -SNAPSHOT)</th> 
+     <td>Yes</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Include projects from reactor</th> 
+     <td>Yes</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Only use release versions</th> 
+     <td>No</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Infer associations from project</th> 
+     <td>Yes</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Allowed version range</th> 
+     <td>[,)</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Current Version</th> 
+     <td>2.4.1</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Associated artifacts</th> 
+     <td>org.apache.maven.plugins:maven-release-plugin</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Property</th> 
+     <td>${maven-release-plugin.version}</td> 
     </tr> 
    </thead> 
    <thead> 
